# doom-forge

./: .gitignore  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json  pubspec.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
lib/: app.dart  app_state.dart  main.dart  rust_ext.dart  shell.dart
lib/i18n/: de.dart  en.dart  es.dart  fr.dart  i18n.dart  it.dart  ja.dart  pl.dart  pt.dart  ru.dart  uk.dart  zh.dart
lib/theme/: theme.dart
lib/views/: browse_view.dart  build_view.dart  compare_view.dart  crash_view.dart  library_view.dart  settings_view.dart  status_view.dart
linux/: CMakeLists.txt
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: doomforge.rs  mod.rs
rust/src/domain/: conflicts.rs  engine.rs  launch.rs  load_order.rs  mod.rs  models.rs  profile.rs  recommend.rs  report.rs
rust/src/services/: ai.rs  mod.rs
rust_builder/: pubspec.yaml
scripts/: gen-icon.cjs  shots.sh  win-build.ps1  win-run.ps1  wsl-build.sh  wsl-catalog-check.sh  wsl-catalog-check2.sh  wsl-check-iwads.sh  wsl-idgames-ua.sh  wsl-netcheck.sh  wsl-probe-engine.sh  wsl-probe.sh  wsl-run.sh  wsl-setup.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  analysis.rs  builds.rs  engines.rs  library.rs  mod.rs  network.rs  profiles.rs
src-tauri/src/domain/: iwad.rs  logs.rs  scan.rs  snapshots.rs  stability.rs
src-tauri/src/services/: net.rs
src-tauri/tests/: domain.rs
tests/: i18n.test.ts  theme.test.ts
windows/: CMakeLists.txt
(+49 files in other folders)
